# royalreward

./: .gitignore  MAPGEN.md  MODENA.md  README.md  ag.bak  ag.txt  ci.sh  db.sh  it.sh  links.txt  meson.build  rc.sh
algos/ground/: aynrand.cpp  aynrand.h  choices.cpp  choices.h  gen.cpp  genesis.cpp  geo_formation.cpp  geo_landscape.cpp  geo_power.cpp  geo_wealth.cpp  geography.cpp  geography.h  geology.cpp  geology.h  geometry.cpp  geometry.h  goldenkey.cpp  goldenkey.h  map_defs.h  maps.cpp  maps.h  meson.build  plasma.cpp  precise.h
algos/mission/: dat_defs.h  dat_dump.cpp  hamming.cpp  hamming.h  legends.cpp  legends.h  lute_tune.cpp  lute_tune.h  meson.build  military.cpp  military.h  mission.cpp  mission.h  savefile.cpp  savefile.h  technology.h
backyard/: gen.cpp
boring/: initron.h  meson.build  mumbling.cpp  mumbling.h
modena/: console.cpp  dat.cpp  dat_dump.cpp  ham.cpp  hamming.cpp  hamming.h  meson.build  mod.cpp  savefile.cpp  savefile.h  settings.h  settings_stdin.cpp  vinegar.cpp  vinegar.h
